<resources>
    <string name="app_name">Demo Example</string>
    <string name="button_settings">Use these settings</string>
    <string name="button_checkout">Continue to payment details</string>
    <string name="button_pay">Pay</string>
    <string name="button_neworder">Start new order</string>
    <string name="button_edit">Edit</string>

    <string name="settings_header">Select your settings</string>
    <string name="settings_theme">Use with custom theming</string>
    <string name="settings_registered">Use as registered user with saved accounts</string>
    <string name="settings_summary">Show summary page</string>

    <string name="checkout_collapsed_title">Checkout details</string>
    <string name="checkout_personal_details">Enter your personal details</string>

    <string name="product_subtitle">3 ATTRACTIONS</string>
    <string name="product_title1">New York City</string>
    <string name="product_title2">Explorer Pass</string>
    <string name="product_date">22 / 09 / 2018</string>
    <string name="product_price">€ 69,45</string>
    <string name="product_count">1 Adult</string>
    <string name="product_total">Total price</string>

    <string name="personal_name_label">Full name</string>
    <string name="personal_name_value">Thomas Smith</string>
    <string name="personal_address_label">Street address</string>
    <string name="personal_address_value">Possartstrasse 148</string>
    <string name="personal_city_label">City</string>
    <string name="personal_city_value">Munich</string>
    <string name="personal_email_label">Email</string>
    <string name="personal_email_value">thomas.smith@gmail.com</string>
    <string name="personal_phone_label">Phone number</string>
    <string name="personal_phone_value">+49 1234 44321</string>
    <string name="personal_details">Possartstrasse 148\n81679 Munich, Germany\n\nthomas.smith@gmail.com\n+49 1234 44321</string>

    <string name="summary_collapsed_title">Payment summary</string>
    <string name="summary_personal_details">Personal details</string>
    <string name="summary_payment_details">Payment details</string>
    <string name="summary_payment_amount">Payment amount</string>

    <string name="confirm_success">Your order is\nconfirmed!</string>

    <string name="dialog_error_title">Checkout Error</string>
    <string name="dialog_error_message">A Checkout error occurred: %1$s</string>
    <string name="dialog_error_button">Close</string>
    <string name="dialog_error_list">Error loading list data for creating the PaymentSession</string>
    <string name="dialog_previous_missing">Please first create a new Charge or Preset Session</string>

</resources>
