<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pmborder_medium"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="@dimen/pmborder_xxsmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_personal_details" />

        <com.google.android.material.card.MaterialCardView
            android:layout_marginBottom="@dimen/pmborder_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pmborder_large"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_name_value" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_details" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_marginBottom="@dimen/pmborder_xxsmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_payment_details" />

        <com.google.android.material.card.MaterialCardView
            android:layout_marginBottom="@dimen/pmborder_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pmborder_large"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <include layout="@layout/view_logo"
                         android:layout_marginEnd="@dimen/pmborder_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pmlogo_width"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/label_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/pmborder_small"
                    android:paddingTop="@dimen/pmborder_small"
                    android:paddingBottom="@dimen/pmborder_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/button_edit" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_marginBottom="@dimen/pmborder_xxsmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_payment_amount" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pmborder_large"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/product_total" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_pay"
                    android:layout_marginTop="@dimen/pmborder_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_pay" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</merge>
