<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/pmwidget_padding"
        android:paddingBottom="@dimen/pmwidget_padding">

        <ImageView
            android:layout_width="@dimen/pmwidget_iconsize"
            android:layout_height="@dimen/pmwidget_iconsize"
            android:layout_marginStart="@dimen/pmborder_xsmall"
            android:layout_marginEnd="@dimen/pmborder_xxsmall"
            android:contentDescription="@string/pmpage_contentdescription"
            android:src="@drawable/ic_checkmark" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/WidgetTextInputStyle"
            android:layout_weight="1"
            android:hint="@string/personal_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/WidgetEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_name_value"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/pmwidget_padding"
        android:paddingBottom="@dimen/pmwidget_padding">

        <ImageView
            android:layout_width="@dimen/pmwidget_iconsize"
            android:layout_height="@dimen/pmwidget_iconsize"
            android:layout_marginStart="@dimen/pmborder_xsmall"
            android:layout_marginEnd="@dimen/pmborder_xxsmall"
            android:contentDescription="@string/pmpage_contentdescription"
            android:src="@drawable/ic_checkmark" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/WidgetTextInputStyle"
            android:layout_weight="1"
            android:hint="@string/personal_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/WidgetEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_address_value"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/pmwidget_padding"
        android:paddingBottom="@dimen/pmwidget_padding">

        <ImageView
            android:layout_width="@dimen/pmwidget_iconsize"
            android:layout_height="@dimen/pmwidget_iconsize"
            android:layout_marginStart="@dimen/pmborder_xsmall"
            android:layout_marginEnd="@dimen/pmborder_xxsmall"
            android:contentDescription="@string/pmpage_contentdescription"
            android:src="@drawable/ic_checkmark" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/WidgetTextInputStyle"
            android:layout_weight="1"
            android:hint="@string/personal_city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/WidgetEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_city_value"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/pmwidget_padding"
        android:paddingBottom="@dimen/pmwidget_padding">

        <ImageView
            android:layout_width="@dimen/pmwidget_iconsize"
            android:layout_height="@dimen/pmwidget_iconsize"
            android:layout_marginStart="@dimen/pmborder_xsmall"
            android:layout_marginEnd="@dimen/pmborder_xxsmall"
            android:contentDescription="@string/pmpage_contentdescription"
            android:src="@drawable/ic_checkmark" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/WidgetTextInputStyle"
            android:layout_weight="1"
            android:hint="@string/personal_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/WidgetEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_email_value"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/pmwidget_padding"
        android:paddingBottom="@dimen/pmwidget_padding">

        <ImageView
            android:layout_width="@dimen/pmwidget_iconsize"
            android:layout_height="@dimen/pmwidget_iconsize"
            android:layout_marginStart="@dimen/pmborder_xsmall"
            android:layout_marginEnd="@dimen/pmborder_xxsmall"
            android:contentDescription="@string/pmpage_contentdescription"
            android:src="@drawable/ic_checkmark" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/WidgetTextInputStyle"
            android:layout_weight="1"
            android:hint="@string/personal_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/WidgetEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_phone_value"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</merge>
