<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_checkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_header" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/pmborder_medium"
            android:orientation="vertical">

            <include layout="@layout/layout_product" />

            <TextView
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorOnBackground"
                android:layout_marginStart="@dimen/pmborder_medium"
                android:layout_marginEnd="@dimen/pmborder_medium"
                android:layout_marginBottom="@dimen/pmborder_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_personal_details" />

            <com.google.android.material.card.MaterialCardView
                android:layout_marginLeft="@dimen/pmborder_medium"
                android:layout_marginRight="@dimen/pmborder_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/pmborder_medium"
                    android:orientation="vertical">

                    <include layout="@layout/layout_checkoutdetails" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_checkout"
                        android:layout_marginTop="@dimen/pmborder_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_checkout" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/pmborder_medium"
                android:orientation="horizontal">

                <TextView
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_total" />

                <TextView
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
