<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:theme="@style/Widget.ExampleDemo.CollapsingToolbar"
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <ImageView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:fitsSystemWindows="true"
            android:src="@drawable/img_travel"
            app:layout_collapseMode="parallax"
            android:contentDescription="TODO" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            app:layout_collapseMode="parallax">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/pmborder_medium"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_subtitle" />

                <TextView
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_title1" />

                <TextView
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_title2" />
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>
